Fixed header sections & have the words remain visible  when hovering.

--- a/src/style.css
+++ b/src/style.css
@@ -77,6 +77,7 @@ HTML, body {
 	text-decoration: none;
 	border-bottom: 4px solid #fff;
 	transition: all 0.15s ease-out;
+	color: #fff; /*fixed issue of header word sections turning blue when mouse is hovering over them*/
 }
 
 .nav-links {
